<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivPDFPreview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/grey_dedede"
        app:srcCompat="@drawable/ic_book"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="@id/ivPdfView"
        app:layout_constraintBottom_toBottomOf="@id/ivPdfView"
        app:layout_constraintStart_toStartOf="@id/ivPdfView"
        app:layout_constraintEnd_toEndOf="@id/ivPdfView"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivPdfView"
        android:layout_width="210dp"
        android:layout_height="297dp"
        android:background="#dedede"
        android:layout_gravity="center"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvInstructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/black"
        android:text="@string/msg_choose_pdf"
        app:layout_constraintTop_toBottomOf="@id/ivPDFPreview"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toStartOf="@id/btChooseFile"
        />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_file"
        android:background="@color/black"
        android:textColor="@color/white"
        android:padding="8dp"
        android:elevation="4dp"
        android:id="@+id/btChooseFile"
        app:layout_constraintTop_toTopOf="@id/tvInstructions"
        app:layout_constraintBottom_toBottomOf="@id/tvInstructions"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        />


    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:id="@+id/ibtLeft"
        android:background="@drawable/bg_circle_black"
        android:src="@drawable/ic_left"
        android:scaleType="fitXY"
        android:padding="4dp"
        app:layout_constraintTop_toTopOf="@id/tvPdfPage"
        app:layout_constraintBottom_toBottomOf="@id/tvPdfPage"
        app:layout_constraintEnd_toStartOf="@id/tvPdfPage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPdfPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/black"
        android:text="@string/placeholder_page_text"
        android:gravity="center"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/ivPDFPreview"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@id/ibtLeft"
        app:layout_constraintEnd_toStartOf="@id/ibtRight"
        />


    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:id="@+id/ibtRight"
        android:background="@drawable/bg_circle_black"
        android:src="@drawable/ic_right"
        android:scaleType="fitXY"
        android:padding="4dp"
        app:layout_constraintTop_toTopOf="@id/tvPdfPage"
        app:layout_constraintBottom_toBottomOf="@id/tvPdfPage"
        app:layout_constraintStart_toEndOf="@id/tvPdfPage"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/msg_ques_show_name"
        android:id="@+id/cbShowName"
        app:layout_constraintStart_toStartOf="@id/ibtLeft"
        app:layout_constraintEnd_toEndOf="@id/ibtRight"
        app:layout_constraintTop_toBottomOf="@id/ibtLeft"
        />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/msg_placeholder_bookname"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/cbShowName"
        />





    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_widget"
        app:layout_constraintTop_toBottomOf="@id/tvPdfPage"
        app:layout_constraintBottom_toTopOf="@id/btUseAnotherPDF"
        app:layout_constraintVertical_bias="1"
        android:layout_marginHorizontal="24dp"
        app:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:id="@+id/btCreateWidget"
        />


    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_another_pdf"
        app:layout_constraintTop_toBottomOf="@id/tvPdfPage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1"
        android:layout_marginVertical="24dp"
        android:layout_marginHorizontal="24dp"
        android:textColor="@color/black"
        app:elevation="0dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/btUseAnotherPDF" />




    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:constraint_referenced_ids="btChooseFile,tvInstructions"
        android:id="@+id/cvInstruction"
        android:visibility="gone"
        />

    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tvTitle,ibtLeft,ibtRight,tvPdfPage,tvTitle,btCreateWidget,btUseAnotherPDF,cbShowName"
        android:visibility="visible"
        android:id="@+id/clCreateWidget"
        />




</androidx.constraintlayout.widget.ConstraintLayout>